fixed change password thingy on mobile version

--- a/style.css
+++ b/style.css
@@ -595,3 +595,14 @@ body {
     top: 4px;
     visibility: visible;
 }
+
+.mdl-textfield {
+    position: relative;
+    font-size: 16px;
+    display: inline-block;
+    box-sizing: border-box;
+    width: clamp(30px, 80%, 300px);
+    max-width: 100%;
+    margin: 0;
+    padding: 20px 0
+}
